# synapticcore

./: .gitignore  CLAUDE.md  PROJECT_STATUS.md  README.md  chat_with_memory.py  claude_desktop_config.example.json  enhanced_memory_system.py  memory.html  memory_feedback_loop.py  memory_system_api.py  narrative_memory_system.py  pyproject.toml  simple_memory_system.py  simplified-agent.py  test_core.py
docs/: claude-memory-archictecture.md  compass_artifact_wf-f94b2c84-9442-4404-917f-f4ff1f1a9826_text_markdown.md  synapticcore-mcp-handoff.md  synapticcore-spec-amendment.md
src/synapticcore/: __init__.py
src/synapticcore/llm/: __init__.py  provider.py
src/synapticcore/mcp/: __init__.py  __main__.py  server.py
src/synapticcore/memory/: __init__.py  arcs.py  base.py  enhanced.py  feedback.py  type_managers.py  types.py
src/synapticcore/retrieval/: __init__.py  activation.py
src/synapticcore/storage/: __init__.py  base.py  json_store.py
tests/: conftest.py  test_activation.py  test_arcs.py  test_mcp_tools.py  test_memory.py  test_types.py
